@@ -546,9 +546,9 @@ lmqn <- function (x, sfun, maxit, maxfun, stepmx, accrcy, trace, ...) {
    argvec <- c(accrcy, gnorm, xnorm) 
    mres  <- modlnp (d, x, g, maxit, upd1, ireset, bounds=FALSE, ipivot, argvec, sfun, ...) 
    p <- mres$p
-   cat("p from first call to modlnp\n")
-   print(p)
-   tmp<-readline("cont.")
+#   cat("p from first call to modlnp\n")
+#   print(p)
+#   tmp<-readline("cont.")
 
    gtp <- mres$gtp
    ncg1<-mres$ncg1
